src/test/ui/imports/unused-imports-in-test-module.stderr
error: unused import: `std::io::BufRead`
  --> $DIR/unused-imports-in-test-module.rs:3:5
   |
LL | use std::io::BufRead;
   |     ^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/unused-imports-in-test-module.rs:1:9
   |
LL | #![deny(unused_imports)]
   |         ^^^^^^^^^^^^^^

error: unused import: `super::a`
  --> $DIR/unused-imports-in-test-module.rs:9:9
   |
LL |     use super::a;
   |         ^^^^^^^^
   |
help: consider adding a `#[cfg(test)]` to the parent module
  --> $DIR/unused-imports-in-test-module.rs:8:1
   |
LL | mod test {
   | ^^^^^^^^

error: unused import: `crate::b`
  --> $DIR/unused-imports-in-test-module.rs:12:13
   |
LL |         use crate::b;
   |             ^^^^^^^^
   |
help: consider adding a `#[cfg(test)]` to the parent module
  --> $DIR/unused-imports-in-test-module.rs:8:1
   |
LL | mod test {
   | ^^^^^^^^

error: unused import: `super::a`
  --> $DIR/unused-imports-in-test-module.rs:17:9
   |
LL |     use super::a;
   |         ^^^^^^^^
   |
help: consider adding a `#[cfg(test)]` to the parent module
  --> $DIR/unused-imports-in-test-module.rs:16:1
   |
LL | mod test_a {
   | ^^^^^^^^^^

error: unused import: `crate::b`
  --> $DIR/unused-imports-in-test-module.rs:20:13
   |
LL |         use crate::b;
   |             ^^^^^^^^
   |
help: consider adding a `#[cfg(test)]` to the parent module
  --> $DIR/unused-imports-in-test-module.rs:16:1
   |
LL | mod test_a {
   | ^^^^^^^^^^

error: aborting due to 5 previous errors

